minor portal wrapper css fixes

--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -37,10 +37,13 @@
         };
     };
 
+    function showWrapper() {
+        if (!$("#tnthNavWrapper").is(":visible")) setTimeout('$("#tnthNavWrapper").css("visibility","visible");', 100);
+    };
+
     $(document).ready(function(){
       // Once nav is loaded, make the wrapper visible - delay displaying to avoid
-      if (!$("#tnthNavWrapper").is(":visible")) setTimeout('$("#tnthNavWrapper").css("visibility","visible");', 100);
-
+      setTimeout("showWrapper();", 200);
       // Configure and start the session timeout monitor
       {% if user %}
           var sessMon = sessionMonitor({
