no orgs modal fixes and bug fixes in profile

--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -7133,9 +7133,9 @@ a.home--modal-link {
     margin-bottom: 2em;
 }
 .noOrg-container label span {
-    position: relative;
-    left: -5px;
-    top: 1px;
+     position: relative;
+     left: -5px;
+     top: 1px;
 }
 #fillOrgs legend {
     font-size: 1.1em;
@@ -7178,6 +7178,7 @@ a.home--modal-link {
         width: 90%;
         max-width: 100%;
         margin: 1em 2.5em 1em 2.6em;
+        height: 340px;
     }
     .home--item-text {
         height: 100px;
@@ -7202,12 +7203,12 @@ a.home--modal-link {
     #modal-org, #modal-org h4 {
         font-size: 14px !important;
     }
-    #fillOrgs *, .noOrg-container *, #submit-orgs {
+    #fillOrgs *, .noOrg-container label span, #submit-orgs {
         font-size: 12px !important;
     }
     .noOrg-container input {
-        position: relative;
-        top: -1px;
+         position: relative;
+         top: -1px;
     }
 }
 @media (max-width: 680px) {
