--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -983,6 +983,7 @@
             <option value="Australia/Yancowinna">Australia/Yancowinna</option>
         </select>
     </div>
+    <div class="timezone-warning"></div>
     <div class="timezone-error"></div>
     <script>
     {% if person %}
@@ -1137,15 +1138,52 @@
                 <div class="profile-item-container custom-container-item">
                     <h4 class="profile-item-title">{{_("Enter manually")}}</h4>
                     <div class="custom-container-content text-muted">{{_("Enter questionnaire responses on patient's behalf. Helpful if responses have been completed on paper.")}}</div><br/>
-                    <button class="btn btn-tnth-primary" onclick="location.replace('/api/present-assessment?instrument_id=epic26&subject_id={{person.id}}');">{{_("Enter manually")}}</button>
+                    <a class="btn btn-tnth-primary" id="assessmentLink" href="location.replace('/api/present-assessment?instrument_id=epic26&subject_id={{person.id}}');">{{_("Enter manually")}}</a>
+
                 </div>
             </div>
         </div>
     </div>
-    <script>$(document).ready(function() {
+    <script>
+    function adjustAssessmentInstrument(status) {
+          var instrumentId = "";
+          var CRV_INSTRUMENT = "epic-26", IRONMAN_INSTRUMENT="eortc";
+          if (hasValue(status)) {
+              if (status) instrumentId = CRV_INSTRUMENT;
+              else instrumentId = IRONMAN_INSTRUMENT;
+          } else {
+            $.ajax ({
+                type: "GET",
+                async: false,
+                url: "/api/patient/{{ person.id }}/clinical/pca_localized"
+            }).done(function(data) {
+              if (data) {
+                var va = data.value ? String(data.value).toLowerCase(): "";
+                //console.log(data)
+                if (hasValue(va)) {
+                   switch(String(va).toLowerCase()) {
+                    case "true":
+                      instrumentId = CRV_INSTRUMENT;
+                      break;
+                    case "false":
+                      instrumentId = IRONMAN_INSTRUMENT;
+                      break;
+                   };
+                };
+              };
+            }).fail(function() {
+                //console.log("Problem retrieving data from server.")
+            });
+        };
+        console.log(" instrumentId: " + instrumentId)
+        if (hasValue(instrumentId)) {
+        $("#assessmentLink").attr("href", "/api/present-assessment?instrument_id="+instrumentId.replace('-','')+"&subject_id={{person.id}}");
+        };
+    };
+
+    $(document).ready(function() {
         $("#profileSendEmailContainer").hide();
         $("#sendEmailLabel").hide();
-        $("#assessPatient").hide();
         $("#loginAsPatient").hide();
         $("#navMenuXs").hide();
         if (! hasValue($("#email").val()) ){
@@ -1155,6 +1193,8 @@
             if (hasValue($(this).val())) $("#profileEmailSelect").attr("disabled", false);
             else $("#profileEmailSelect").attr("disabled", true);
         });
+        //initialize pca localized modal, NOTE, will not need to make extra ajax call if pca_localized_status is set initially
+        adjustAssessmentInstrument(pcaLocalizedStatus);
     });</script>
 {%- endmacro %}
 {% macro profile(person, current_user, consent_agreements) -%}
