--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1138,7 +1138,7 @@
                 <div class="profile-item-container custom-container-item">
                     <h4 class="profile-item-title">{{_("Enter manually")}}</h4>
                     <div class="custom-container-content text-muted">{{_("Enter questionnaire responses on patient's behalf. Helpful if responses have been completed on paper.")}}</div><br/>
-                    <a class="btn btn-tnth-primary" id="assessmentLink" href="location.replace('/api/present-assessment?instrument_id=epic26&subject_id={{person.id}}');">{{_("Enter manually")}}</a>
+                    <a class="btn btn-tnth-primary" id="assessmentLink" href="location.replace('/api/present-assessment?instrument_id=eortc&instrument_id=prems&subject_id={{person.id}}');">{{_("Enter manually")}}</a>
 
                 </div>
             </div>
