removing white space in profile in Truenth, stemming from hiding of study Id field

--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -945,7 +945,7 @@ table.profile-audit-log TH,
   height: 34em;
 }
 .side-md {
-  height: 24em;
+  height: 22em;
 }
 
 .flex {
@@ -1263,7 +1263,7 @@ div.org-container input[type="checkbox"] {
     height: 40em;
   }
   .side-custom {
-    height: 37em;
+    height: 38em;
   }
   #phone,
   #email {
@@ -1338,6 +1338,12 @@ div.org-container input[type="checkbox"] {
   #adminTable .email-field {
     display: none;
   }
+  .side-custom {
+    height: 37em;
+  }
+  .one-side {
+    height: 24em;
+  }
 }
 @media (max-width: 730px) {
   #userSessionsList {
@@ -1409,7 +1415,10 @@ div.org-container input[type="checkbox"] {
     display: none;
   }
   .side-custom {
-    height: 35em;
+    height: 36em;
+  }
+  .one-side {
+    height: 23em;
   }
 }
 @media (min-width: 992px) {
