--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1050,7 +1050,7 @@ t
   height: 34em;
 }
 .side-md {
-  height: 24em
+  height: 22em
 }
 .flex {
   display: flex;
@@ -1401,7 +1401,7 @@ div.org-container input[type="checkbox"] {
     height: 40em;
   }
   .side-custom {
-    height: 37em;
+    height: 38em;
   }
   #phone, #email {
     width: 100%;
@@ -1482,6 +1482,13 @@ div.org-container input[type="checkbox"] {
     display: none;
   }
 
+  .side-custom {
+    height: 37em;
+  }
+  .one-side {
+    height: 24em;
+  }
+
 }
 
 @media (max-width: 730px) {
@@ -1560,9 +1567,11 @@ div.org-container input[type="checkbox"] {
     display: none;
   }
   .side-custom {
-    height: 35em
+    height: 36em
   }
-
+  .one-side {
+    height: 23em;
+  }
 }
 @media (min-width: 992px) {
 
