truenth intro text fix

--- a/portal/templates/gil/index.html
+++ b/portal/templates/gil/index.html
@@ -6,7 +6,7 @@
       <div class="home-intro">
         <div class="intro"><img class="intro__img intro__img--desktop" src="{{url_for('static', filename='img/Home-Truck-Top-001.jpg') }}"><img class="intro__img intro__img--mobile" src="{{url_for('static', filename='img/Home-Truck-Top-Mobile.jpg') }}">
           <div class="intro__content">
-            <p class="intro__sub">TrueNTH is a collective approach to improving quality of life before, during, and after treatment for prostate cancer.</p><a class="intro__down js-scroll-down" data-target=".home-intro .intro">
+            <p class="intro__sub">TrueNTH is a collective approach to improving your quality of life throughout your prostate cancer journey.</p><a class="intro__down js-scroll-down" data-target=".home-intro .intro">
               <figure></figure></a>
           </div>
         </div>
