--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -40,6 +40,8 @@
         {% if config.PROVIDER_BULK_DATA_ACCESS %}
           <div class="orglist-download-container"><div><a href="#" id="patientAssessmentDownload" class="create-user-link btn btn-lg btn-tnth-primary" data-toggle="modal" data-target="#dataDownloadModal">{{ _("Export assessment data") }} &nbsp;<span class="glyphicon glyphicon-save"></span></a></div>
          </div>
+        {% endif %}
+        {% if config.ALLOW_FILTER_BY_ORGS %}
          <div id="orglistSelector" class="dropdown btn-group orglist-selector">
             <button id="orglist-dropdown" class="create-user-link btn btn-secondary btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Filter List By Clinic &nbsp;<span class="glyphicon glyphicon-menu-down text-muted"></span><span class="glyphicon glyphicon-menu-up text-muted tnth-hide"></span>
@@ -172,7 +174,7 @@ $(document).ready(function() {
       if ($(this).is(":checked")) $("#_downloadMessage").text("");
   });
 
-  {% if config.PROVIDER_BULK_DATA_ACCESS %}
+  {% if config.ALLOW_FILTER_BY_ORGS %}
     AT.initOrgsList({{user.id}}, leafOrgs, (/org_list/.test(location.href) ? org_list : null));
     $("#orglist-dropdown").on("click", function() {
       handleOrgsListDropDown(this);
