front end trim fixes - trim text fields in GIL, also add event listener for pasting event

--- a/portal/templates/flask_user/flask_user_base.html
+++ b/portal/templates/flask_user/flask_user_base.html
@@ -9,7 +9,7 @@
 {% block document_ready %}
 	{{super()}}
 	$(document).on("ready", function() {
-		$("input[type='text']").on("blur", function() {
+		$("input[type='text']").on("blur paste", function() {
 			$(this).val($.trim($(this).val()));
 		});
 	});
