--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -123,12 +123,12 @@ div.orglist-selector {
 #adminTableToolbar div.orglist-selector button {
   background-color: #FFF;
   border: 1px solid #ccc;
-  height: 2.95em;
+  padding: 0.65em;
+  height: 3.01em;
   border-radius: 4px;
   font-size: 0.9em;
 }
 #adminTableToolbar div.dropdown-menu {
-  z-index: 50;
   max-height: 500px;
   transition: height 300ms ease-in;
 }
