--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -124,7 +124,7 @@ div.orglist-selector {
   background-color: #FFF;
   border: 1px solid #ccc;
   padding: 0.65em;
-  height: 3.01em;
+  height: 2.86em;
   border-radius: 4px;
   font-size: 0.9em;
 }
@@ -341,6 +341,7 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
 #patientAssessmentDownload {
   padding: 0.65em;
   font-size: 1.1em;
+  height: 2.6em;
 }
 #dataDownloadModal .modal-body {
   padding: 1em
@@ -1601,7 +1602,7 @@ div.org-container input[type="checkbox"] {
 
   #adminTableToolbar div.dropdown-menu {
     width: 200px !important;
-    overflow: hidden;
+    overflow: auto;
   }
   div.orglist-selector div.dropdown-menu #userOrgs{
     width: 180px !important;
