--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -41,10 +41,9 @@
           <div class="orglist-download-container"><div><a href="#" id="patientAssessmentDownload" class="create-user-link btn btn-lg btn-tnth-primary" data-toggle="modal" data-target="#dataDownloadModal">{{ _("Export assessment data") }} &nbsp;<span class="glyphicon glyphicon-save"></span></a></div>
          </div>
         {% endif %}
-        {% if config.ALLOW_FILTER_BY_ORGS %}
          <div id="orglistSelector" class="dropdown btn-group orglist-selector">
             <button id="orglist-dropdown" class="create-user-link btn btn-secondary btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="cursor: pointer">
-              Filter List By Clinic &nbsp;<span class="glyphicon glyphicon-menu-down text-muted"></span><span class="glyphicon glyphicon-menu-up text-muted tnth-hide"></span>
+              Filter List By Site &nbsp;<span class="glyphicon glyphicon-menu-down text-muted"></span><span class="glyphicon glyphicon-menu-up text-muted tnth-hide"></span>
             </button>
             <div id="org-menu" class="dropdown-menu" aria-labelledby="orglist-dropdown">
               <div class="form-group smaller-text" id="userOrgs">
@@ -52,7 +51,6 @@
               </div>
             </div>
           </div>
-        {% endif %}
         <span id="tableCount"></span>
       </div>
       <table id="adminTable"
@@ -85,7 +83,7 @@
                   {% if 'reports' in config.PATIENTS_BY_PROVIDER_ADDL_FIELDS %}<th data-field="provider_html" data-sortable="true" data-class="reports-field">{{ _("Reports") }}</th>{% endif %}
                   {% if 'status' in config.PATIENTS_BY_PROVIDER_ADDL_FIELDS %}<th data-field="status" data-sortable="false" data-card-visible="false" data-searchable="false" data-class="status-field">{{ _("Assessment Status") }}</th>{% endif %}
                   <th data-field="consentdate" data-sortable="false" data-card-visible="false" data-searchable="false" data-class="consentdate-field text-center">{{_("Consent Date (GMT)")}}</th>
-                  <th data-field="organization" data-sortable="true" data-class="organization-field">{{ _("Organization(s)") }}</th>
+                  <th data-field="organization" data-sortable="true" data-class="organization-field">{{ _("Site(s)") }}</th>
               </tr>
           </thead>
           <tbody id="admin-table-body" data-link="row" class="rowlink">
@@ -175,10 +173,9 @@ $(document).ready(function() {
       if ($(this).is(":checked")) $("#_downloadMessage").text("");
   });
 
-  {% if config.ALLOW_FILTER_BY_ORGS %}
-    //console.log(org_list)
-    AT.initOrgsList(org_list);
-  {% endif %}
+
+  AT.initOrgsList(org_list);
+
 
 });
 
